--- a/style.css
+++ b/style.css
@@ -18,22 +18,41 @@ h2{
     display:flex;
     justify-content: center;
     width:100%;
-/*    border: 3px #000 solid; */
+/*  border: 3px #000 solid; */
 }
 
 .dados{
+    box-shadow: 10px 5px 15px #222;
     background-color: #fff;
-    font-size: 50px;
+    font-size: 80px;
     display:flex;
     justify-content:center;
     align-items:center;
-    width:200px;
-    height:200px;
-    border: 3px #000 solid;
-    margin:20px;
+    width:150px;
+    height:150px;
+    border: 4px #000 solid;
+    margin:10px;
     text-align: center;
-}
+    line-height:30px;
+    padding-bottom:30px;}
+
 #tirar{
-    margin-left: 47%;
-    margin-top: 20px;;
+    margin-top: 10px;
+    width: 150px;
+    font-size: 17px;
+}
+
+#container2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#resultado{
+    margin-top:20px;
+    border: 3px #000 solid;
+    padding: 5px;
+    background: #6c6;
+    font-size:25px;
 }
