--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ h2{
 }
 
 .dados{
-    box-shadow: 10px 5px 15px #222;
+    border-radius:15px;
+    box-shadow: 5px 5px 15px #222;
     background-color: #fff;
     font-size: 80px;
     display:flex;
@@ -41,6 +42,7 @@ h2{
     margin-top: 10px;
     width: 150px;
     font-size: 17px;
+    border-radius:10px;
 }
 
 #container2{
@@ -51,6 +53,9 @@ h2{
 }
 
 #resultado{
+    text-align:center;
+    min-width:150px;
+    border-radius:10px;
     margin-top:20px;
     border: 3px #000 solid;
     padding: 5px;
